--- a/views/teas.handlebars
+++ b/views/teas.handlebars
@@ -48,3 +48,19 @@
         {{/each}}
         </tbody>
     </table>
+
+<form id="addTea" method="POST" action="/addTea">
+    <label for="origin">Origin:</label><br />
+    <input type="text" id="origin" name="origin"><br />
+    <label for="color">Color:</label><br />
+    <input type="text" id="color" name="color"><br />
+    <label for="matcha">Matcha:</label><br />
+    <input type="text" id="matcha" name="matcha"><br />
+    <label for="flavor">Flavor:</label><br />
+    <input type="text" id="flavor" name="flavor"><br />
+    <label for="season">Season:</label><br />
+    <input type="text" id="season" name="season"><br />
+    <label for="price">Price:</label><br />
+    <input type="number" id="price" name="price"><br />
+    <button type="submit">Create New Tea</button>
+</form>
