--- a/views/beans.handlebars
+++ b/views/beans.handlebars
@@ -40,3 +40,14 @@
     {{/each}}
     </tbody>
 </table>
+
+<form id="addBean" method="POST" action="/addBean">
+    <label for="countryOfOrigin">Country of Origin:</label><br />
+    <input type="text" id="countryOfOrigin" name="countryOfOrigin"><br />
+    <label for="roastType">Roast Type:</label><br />
+    <input type="text" id="roastType" name="roastType"><br />
+    <label for="roastDate">Roast Date:</label><br />
+    <input type="date" id="roastDate" name="roastDate"><br />
+    <button type="submit">Create New Bean</button>
+</form>
+
