--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,8 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/morning-dawn.css">
+    <link rel="stylesheet" type="text/css" href="css/morning-dawn.css">
     <title>Morning Dawn</title>
+    <script src="/deletes.js"></script>
+    <script src="/updates.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
     <div>
