--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/morning-dawn.css">
+    <link rel="stylesheet" type="text/css" href="/css/morning-dawn.css">
     <title>Morning Dawn</title>
     <script src="/deletes.js"></script>
     <script src="/updates.js"></script>
