--- a/views/coffee-orders.handlebars
+++ b/views/coffee-orders.handlebars
@@ -3,6 +3,7 @@
         <tr>
             <th>Coffee ID:</th>
             <th>Order ID:</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -10,6 +11,7 @@
         <tr>
             <td>{{this.coffeeID}}</td>
             <td>{{this.orderID}}</td>
+            <td><button onclick="deleteCoffeeOrders({{this.coffeeID}}, {{this.orderID}})">Delete</button></td>
         </tr>
     {{/each}}
     </tbody>
