--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,6 @@
         <li><a href="/beans-coffee">Beans with Coffee</a></li>
         <li><a href="/teas">Teas</a></li>
         <li><a href="/tea-orders">Tea Orders</a></li>
-        <li><a href="/customers">Customer Accounts</a></li>
+        <li><a href="/customers/">Customer Accounts</a></li>
     </ul>
   </body>
