--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,8 @@
     <title>Morning Dawn</title>
     <script src="/deletes.js"></script>
     <script src="/updates.js"></script>
+    <script src="/searches.js"></script>
+    <script src="/selected.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
