--- a/views/coffees.handlebars
+++ b/views/coffees.handlebars
@@ -1,7 +1,5 @@
-<a href="coffee-orders">Coffee Orders</a><br>
-<a href="/beans-coffee">Coffee Beans</a><br>
 <p>Filter:</p>
-<form>
+{{!-- <form>
     <label for="coffeeID">Coffee ID:</label><br>
     <input type="text" id="coffeeID" name="coffeeID"><br>
     <label for="type">Type:</label><br>
@@ -9,8 +7,8 @@
     <label for="additive">Additive:</label><br>
     <input type="text" id="additive" name="additive"><br>
     <button>Filter</button>
-</form>
-<br />
+</form> --}}
+{{!-- <br /> --}}
 <table>
     <thead>
         <tr>
