--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,76 @@
-<h1>Morning Dawn</h1>
-    <p>Site Navigation:</p>
-    <ul>
-        <li><a href="/orders">Orders</a></li>
-        <li><a href="/coffees">Coffees</a></li>
-        <li><a href="/coffee-orders">Coffee Orders</a></li>
-        <li><a href="/beans">Beans</a></li>
-        <li><a href="/beans-coffee">Beans with Coffee</a></li>
-        <li><a href="/teas">Teas</a></li>
-        <li><a href="/tea-orders">Tea Orders</a></li>
-        <li><a href="/customers/">Customer Accounts</a></li>
-    </ul>
+    <h1>Morning Dawn</h1>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Orders</h5>
+                    <p class="card-text">Shows the Orders Placed</p>
+                    <a href="/orders/" class="btn btn-primary">See Orders</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Coffees</h5>
+                    <p class="card-text">Shows the Coffees Available</p>
+                    <a href="/coffees/" class="btn btn-primary">See Coffees</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Coffee Orders</h5>
+                    <p class="card-text">Shows the Orders with the Coffees</p>
+                    <a href="/coffee-orders/" class="btn btn-primary">See Coffee Orders</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Beans</h5>
+                    <p class="card-text">Shows the Beans</p>
+                    <a href="/beans/" class="btn btn-primary">See Beans</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Beans with Coffee</h5>
+                    <p class="card-text">Shows which Beans go with which Coffee</p>
+                    <a href="/beans-coffee/" class="btn btn-primary">See Beans with Coffee</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Teas</h5>
+                    <p class="card-text">Shows the Teas</p>
+                    <a href="/teas/" class="btn btn-primary">See Teas</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Tea Orders</h5>
+                    <p class="card-text">Shows which Teas go with which Order</p>
+                    <a href="/tea-orders/" class="btn btn-primary">See Tea Orders</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Customers</h5>
+                    <p class="card-text">Shows Customers who have placed an order</p>
+                    <a href="/customers/" class="btn btn-primary">See Customers</a>
+                </div>
+            </div>
+        </div>
+    </div>
   </body>
