--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,8 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/morning-dawn.css">
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
     <title>Morning Dawn</title>
+    
     <script src="/deletes.js"></script>
     <script src="/updates.js"></script>
     <script src="/searches.js"></script>
@@ -11,9 +17,49 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
-    <div>
-        <p><a href="/">Home</a></p>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Coffees
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/orders/">Coffees</a></li>
+                    <li><a class="dropdown-item" href="/beans-coffee/">Coffee Beans</a></li>
+                    <li><a class="dropdown-item" href="/beans/">Beans</a></li>
+                </ul>
+                <li class="nav-item">
+                <a class="nav-link" href="/customers/">Customers</a>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Orders
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/orders/">Orders</a></li>
+                    <li><a class="dropdown-item" href="/coffee-orders/">Coffee Orders</a></li>
+                    <li><a class="dropdown-item" href="/tea-orders/">Tea Orders</a></li>
+                </ul>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/teas/">Teas</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="inner-body">
+        {{{body}}}
     </div>
-	{{{body}}}
+
 </body>
 </html>
