--- a/views/beans.handlebars
+++ b/views/beans.handlebars
@@ -1,21 +1,16 @@
 <h1>Types of Beans</h1>
-<a href="/beans-coffee">Coffee Bean Table</a>
-<br />
-<form>
-    <p>Find a Bean:</p>
-    <label for="beanID">Bean ID:</label><br>
-    <input type="text" id="beanID" name="beanID"><br>
-    <label for="countryOfOrigin">Country of Origin:</label><br>
-    <input type="text" id="countryOfOrigin" name="countryOfOrigin"><br>
-    <label for="roastType">Roast Type:</label><br>
-    <input type="text" id="roastType" name="roastType"><br>
-    <label for="roastDate">Roast Date:</label><br>
-    <input type="date" id="roastDate" name="roastDate"><br>
-    <button>Filter</button>
+<form id='search-bean' action='' method=''>
+    <div class="mb-3">
+        <label class="form-label"> Search beans with Country Name:</label>
+        <input id='country_search_string' class="form-control" type='text' name='country_search_string' value=''>  
+    </div>
+<!--- this form does not submit directly, the button handles all the interaction with backend -->
+
+    <input class='btn btn-primary' type="button" value="Search" onclick="searchBeansByCountry()">
 </form>
 <br />
 <p><strong>Beans:</strong></p>
-<table>
+<table class="table table-striped">
     <thead>
         <tr>
             <th>Bean ID:</th>
@@ -28,26 +23,28 @@
     </thead>
     
     <tbody>
-    {{#each data}}
+    {{#each beans}}
         <tr>
-            <td>{{this.beanID}}</td>
-            <td>{{this.countryOfOrigin}}</td>
-            <td>{{this.roastType}}</td>
-            <td>{{this.roastDate}}</td>
-            <td>Update</td>
-            <td><button onclick="deleteBean({{this.beanID}})">Delete</button></td>
+            <td>{{beanID}}</td>
+            <td>{{countryOfOrigin}}</td>
+            <td>{{roastType}}</td>
+            <td>{{roastDate}}</td>
+            <td><a href="/beans/{{beanID}}">Update</a></td>
+            <td><button onclick="deleteBean({{beanID}})">Delete</button></td>
         </tr>
     {{/each}}
     </tbody>
 </table>
+<br />
 
-<form id="addBean" method="POST" action="/addBean">
+<h4>Make a new Bean:</h4>
+<form id="addBean" method="POST" action="/beans/">
     <label for="countryOfOrigin">Country of Origin:</label><br />
     <input type="text" id="countryOfOrigin" name="countryOfOrigin"><br />
     <label for="roastType">Roast Type:</label><br />
     <input type="text" id="roastType" name="roastType"><br />
     <label for="roastDate">Roast Date:</label><br />
     <input type="date" id="roastDate" name="roastDate"><br />
-    <button type="submit">Create New Bean</button>
+    <button type="submit" class="btn btn-primary">Create a new Bean</button>
 </form>
 
