--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
                     Coffees
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="/orders/">Coffees</a></li>
+                    <li><a class="dropdown-item" href="/coffees/">Coffees</a></li>
                     <li><a class="dropdown-item" href="/beans-coffee/">Coffee Beans</a></li>
                     <li><a class="dropdown-item" href="/beans/">Beans</a></li>
                 </ul>
