adding CRUD for Teas

--- a/views/beans.handlebars
+++ b/views/beans.handlebars
@@ -37,7 +37,7 @@
 </table>
 <br />
 
-<h4>Make a new Bean:</h4>
+<h4>Make a New Bean:</h4>
 <form id="addBean" method="POST" action="/beans/">
     <label for="countryOfOrigin">Country of Origin:</label><br />
     <input type="text" id="countryOfOrigin" name="countryOfOrigin"><br />
